--- a/calculator/style.css
+++ b/calculator/style.css
@@ -19,22 +19,24 @@
     
        }
       #main {
-        border: 3px solid rgba(34, 70, 136, 0.541);
+        border: 5px solid rgba(9, 0, 17, 0.808);
         height: 450px;
         width: 400px;
         margin: 10px;
         margin-top: 30px;
         border-radius: 10px;
         background-color: transparent;
+        box-shadow: 12px 20px 20px 20px rgba(15, 0, 0, 0.671);
       }
       .inp {
-        border: 2px solid black;
+        
+         box-shadow: 1px 10px 10px 10px rgba(15, 0, 0, 0.671);
         width: 380px;
         height: 150px;
         display: flex;
         justify-content: center;
         margin: 10px;
-        border-radius: 10px;
+        border-radius: 5px;
         font-size: 35px;
         font-weight: bold;
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -44,6 +46,8 @@
         justify-content: center;
         flex-direction: column;
         margin: 10px;
+        
+       
       }
       .num.ope {
         width: auto;
@@ -51,6 +55,7 @@
         display: block;
         justify-content: center;
         margin: 10px;
+         
       }
       .op,
       .op1 {
@@ -68,4 +73,11 @@
         justify-content: center;
         align-items: center;
         margin-top: -10px;
+      }
+      button{
+         border: 2px solid black;
+         border-radius: 5px;
+         box-shadow: 6px 3px 5px  3px rgba(0, 0, 0, 0.705);
+         font-size: 20px;
+        font-weight: 300;
       }
